Terraform/internet-gatway.tf

resource "aws_internet_gateway" "main_gui" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main_gui"
  }
}
